test/Fail/LiftDisplayIntermediate.err
LiftDisplayIntermediate.agda:20.7-11: error: [UnequalTerms]
The terms
  g zero
and
  zero
are not equal at type Nat
when checking that the expression refl has type g zero ≡ zero
